Disabled selectpicker plugin in app.js and added jquery plugins for calendar / date control

--- a/CarHub/wwwroot/css/site.css
+++ b/CarHub/wwwroot/css/site.css
@@ -1,71 +1,119 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿.form-group select.search-fields {
+    width: 100%;
+    padding: 5px !important;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+
+/** admin form start **/
+
+.other-hide
+{
+    display:none;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.other-show
+{
+    display:block;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.admin-form .contact-info {
+    text-align: center;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
+    .admin-form .contact-info strong {
+        font-weight: 500;
+        font-size: 14px;
+        color: #525252;
+    }
+
+    .admin-form .contact-info i {
+        font-size: 24px;
+        color: #212529;
+    }
+
+    .admin-form .contact-info p {
+        margin: 0;
+        font-size: 15px;
+    }
+
+.admin-form .form-control {
+    width: 100%;
+    padding: 10px 20px;
     font-size: 16px;
-  }
+    background: transparent;
+    outline: 0;
+    height: 45px;
+    border-radius: 3px;
+    border: 1px solid #dbdbdb;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .06);
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    .admin-form .form-control:focus {
+        color: #495057;
+        background-color: transparent;
+        border: 1px solid #dbdbdb;
+        outline: 0;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .06);
+    }
+
+.admin-form .form-group {
+    margin-bottom: 20px;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.admin-form textarea {
+    min-height: 250px;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.admin-form .btn-message {
+    border-radius: 50px;
+    padding: 10px 60px 11px;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.contact-map {
+    height: 350px !important;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+.contact-map-content .map-content {
+    width: 250px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+.admin-form .contact-info-2 {
+    padding: 40px;
+    border-radius: 5px;
+    margin-left: 50px;
+    background: #fff;
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
+}
+
+    .admin-form .contact-info-2 .ci-box i {
+        width: 45px;
+        line-height: 50px;
+        margin-right: 5px;
+        font-size: 33px;
+    }
+
+    .admin-form .contact-info-2 .ci-box h5 {
+        font-weight: 500;
+        font-size: 16px;
+        margin: 0 0 5px;
+    }
+
+    .admin-form .contact-info-2 .ci-box p {
+        font-size: 15px;
+        font-weight: 400;
+        margin-bottom: 0;
+    }
+
+    .admin-form .contact-info-2 .ci-box {
+        margin: 0 0 30px 0;
+        position: relative;
+        width: 100%;
+    }
+
+.admin-form .ci-box .icon {
+    position: absolute;
+}
+
+.admin-form .ci-box .detail {
+    margin-left: 50px;
 }
