Updated shared layout

--- a/CarHub/Views/_ViewImports.cshtml
+++ b/CarHub/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CarHub
 @using CarHub.Domain.ViewModels
+@using CarHub.Domain.ViewModels.Admin
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
