--- a/CarHub/Views/Shared/_Layout.cshtml
+++ b/CarHub/Views/Shared/_Layout.cshtml
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap-submenu.css">
-
-    <link rel="stylesheet" type="text/css" href="~/css/bootstrap-select.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/magnific-popup.css">
     <link rel="stylesheet" type="text/css" href="~/fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="~/fonts/flaticon/font/flaticon.css">
@@ -20,11 +18,12 @@
     <link rel="stylesheet" type="text/css" href="~/css/slick.css">
     <link rel="stylesheet" type="text/css" href="~/css/lightbox.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/jnoty.css">
-
+    <link rel="stylesheet" type="text/css" href="~/css/jquery-ui.min.css">
+    <link type="text/css" href="~/css/jquery-steps.css" rel="stylesheet" />
     <!-- Custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
     <link rel="stylesheet" type="text/css" id="style_sheet" href="~/css/skins/red.css">
-
+    <link rel="stylesheet" type="text/css" id="style_sheet" href="~/css/site.css">
     <!-- Favicon icon -->
     <link rel="shortcut icon" href="~/img/favicon.ico" type="image/x-icon">
 
@@ -142,7 +141,7 @@
                             <li>
                                 <a href="about.html"><i class="fa fa-angle-right"></i>About Us</a>
                             </li>
-                             <li>
+                            <li>
                                 <a href="car-list-rightside.html"><i class="fa fa-angle-right"></i>Car Listing</a>
                             </li>
                         </ul>
@@ -219,7 +218,6 @@
     <script src="~/js/bootstrap-submenu.js"></script>
     <script src="~/js/rangeslider.js"></script>
     <script src="~/js/jquery.mb.YTPlayer.js"></script>
-    <script src="~/js/bootstrap-select.min.js"></script>
     <script src="~/js/jquery.easing.1.3.js"></script>
     <script src="~/js/jquery.scrollUp.js"></script>
     <script src="~/js/jquery.mCustomScrollbar.concat.min.js"></script>
@@ -231,8 +229,9 @@
     <script src="~/js/jquery.mousewheel.min.js"></script>
     <script src="~/js/lightgallery-all.js"></script>
     <script src="~/js/jnoty.js"></script>
+    <script src="~/js/jquery-ui.min.js"></script>
     <script src="~/js/app.js"></script>
-
+    <script src="~/js/jquery.steps.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <!-- Custom javascript -->
