--- a/CarHub/Views/Shared/_Layout.cshtml
+++ b/CarHub/Views/Shared/_Layout.cshtml
@@ -20,10 +20,11 @@
     <link rel="stylesheet" type="text/css" href="~/css/jnoty.css">
     <link rel="stylesheet" type="text/css" href="~/css/jquery-ui.min.css">
     <link type="text/css" href="~/css/jquery-steps.css" rel="stylesheet" />
+    <link href="https://transloadit.edgly.net/releases/uppy/v1.14.1/uppy.min.css" rel="stylesheet">
+
     <!-- Custom stylesheet -->
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
     <link rel="stylesheet" type="text/css" id="style_sheet" href="~/css/skins/red.css">
-    <link rel="stylesheet" type="text/css" id="style_sheet" href="~/css/site.css">
     <!-- Favicon icon -->
     <link rel="shortcut icon" href="~/img/favicon.ico" type="image/x-icon">
 
@@ -42,6 +43,7 @@
     <script  src="~/js/html5shiv.min.js"></script>
     <script  src="~/js/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" type="text/css" id="style_sheet" href="~/css/site.css">
 
 </head>
 <body>
@@ -77,7 +79,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand company-logo-2" href="index.html">
-                    <img src="img/logos/black-logo.png" alt="logo">
+                    <img src="~/img/black-logo.png" alt="logo"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="fa fa-bars"></span>
@@ -236,6 +238,10 @@
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <!-- Custom javascript -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://transloadit.edgly.net/releases/uppy/v1.14.1/uppy.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
+
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
