--- a/CarHub/wwwroot/css/site.css
+++ b/CarHub/wwwroot/css/site.css
@@ -4,20 +4,32 @@
 }
 
 .add-new-car-outer-container {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(240,21,31,1) 61%, rgba(255,0,108,1) 72%);
+    /*background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(240,21,31,1) 61%, rgba(255,0,108,1) 72%);*/
+    background-image: url('../img/static/carimage4.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-.add-new-car-outer-container .container {
-    background-color: white;
-    padding: 0;
-    padding-top: 20px;
-    border-radius: 10px;
-}
+    .add-new-car-outer-container .container {
+        /*background-color: white;*/
+        background: rgba(0,0,0,0.6);
+        padding: 0;
+        padding-top: 20px;
+        border-radius: 10px;
+    }
 
 .add-new-car-outer-container .container .main-title {
     padding-bottom: 10px;
     border-bottom: 2px solid red;
+}
+
+.add-new-car.main-title h1
+{
+    color:white;
+}
+.add-new-car.main-title p {
+    color: white;
 }
 
 /**admin section - add car form **/
@@ -72,3 +84,12 @@
     overflow:scroll;
 }
 
+#validation-errors {
+    padding-left:25px;
+    margin-bottom:10px;
+}
+#validation-errors li {
+    list-style-type: disc;
+    font-size:15px;
+    color:white
+}
